test/tests/stages/14_pointers/invalid_types/extra_credit/bitwise_rshift_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  *
  identifier(x)
  =
  const int(0)
  ;
  return
  (
  int
  )
  (
  identifier(x)
  >>
  const int(10)
  )
  ;
  }
